# AIResearchAgent

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_CHECKLIST.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
airflow/dags/: daily_ingestion_dag.py  initial_ingestion_dag.py
docker/: Dockerfile.airflow  Dockerfile.streamlit
docs/: FAQ.md  PHASE1_SETUP.md  SUMMARY.md  architecture.md
scripts/: init_db.py
src/: __init__.py
src/evaluation/: __init__.py  llm_eval.py  retrieval_eval.py
src/ingestion/: __init__.py  arxiv_scraper.py  semantic_scholar.py
src/llm/: __init__.py  openai_client.py  prompt_templates.py
src/processing/: __init__.py  chunking.py  embeddings.py
src/rag/: __init__.py  pipeline.py  query_rewriter.py  reranker.py  retriever.py
src/utils/: config.py  database.py  helpers.py  logger.py
src/vector_db/: __init__.py  qdrant_client.py
tests/: __init__.py
tests/integration/: test_sample_integration.py
tests/unit/: test_sample.py
